# talent-plan

courses/rust/projects/project-1/: Cargo.toml
courses/rust/projects/project-2/: Cargo.toml
courses/rust/projects/project-2/src/: error.rs  kv.rs
