[package]
name = "kvs"
version = "0.1.0"
authors = ["QuarticCat <QuarticCat@protonmail.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
tempfile = "3.3.0"
walkdir = "2.3.2"
